refactor: 텍스트 블록 처리