@@ -25,42 +25,42 @@ public class MongoRecommendClient {
     private static final String INDEX_NAME = "searchIndex";
     private static final String COLLECTION_NAME = "search_info";
 
-    private static final String PROJECT_STAGE = "{" +
-        "$project: {" +
-        "camp_id: 1," +
-        "name: 1," +
-        "intro: 1," +
-        "image_url: 1," +
-        "address: 1," +
-        "hashtags: 1," +
-        "matchCount: 1," + // 매칭된 키워드 수 추가
-        "score: {$meta: 'searchScore'}" +
-        "}}";
+    private static final String PROJECT_STAGE = """
+        {
+            $project: {
+                camp_id: 1,
+                name: 1,
+                intro: 1,
+                image_url: 1,
+                address: 1,
+                hashtags: 1,
+                matchCount: 1,   // 매칭된 키워드 수 추가
+                score: {$meta: 'searchScore'}
+            }
+        }""";
 
     public SearchResultDto getMatchedCamps(List<String> userKeywords, Pageable pageable) {
-        String searchQuery = String.format(
-            "{$search: {" +
-                "index: '%s'," +
-                "compound: {" +
-                "should: [%s]" +
-                "}" +
-                "}}",
-            INDEX_NAME,
-            createKeywordMatchClauses(userKeywords)
-        );
+        String searchQuery = """
+            {
+                $search: {
+                    index: '%s',
+                    compound: {
+                        should: [%s]
+                    }
+                }
+            )""".formatted(INDEX_NAME, createKeywordMatchClauses(userKeywords));
 
         // 매칭된 키워드 수를 계산하는 스테이지
-        String matchCountStage = "{$addFields: {" +
-            "matchCount: {" +
-                "$size: {" +
-            "$setIntersection: [\"$hashtags\", " +
-                    "[" + userKeywords.stream()
-                    .map(keyword -> "\"" + keyword + "\"")
-                    .collect(Collectors.joining(", ")) + "]" +
-                    "]" +
-                "}" +
-            "}" +
-        "}}";
+        String matchCountStage = """
+            {$addFields: {
+                matchCount: {
+                    $size: {
+                        $setIntersection: ["$hashtags", [%s]]
+                    }
+                }
+            }}""".formatted(userKeywords.stream()
+                .map(keyword -> "\"" + keyword + "\"")
+                .collect(Collectors.joining(", ")));
 
         // 매칭된 키워드가 1개 이상인 것만 필터링
         String filterStage = "{$match: {matchCount: {$gt: 0}}}";
@@ -68,14 +68,11 @@ public class MongoRecommendClient {
         // 매칭 수와 검색 점수로 정렬
         String sortStage = "{$sort: {matchCount: -1, score: -1}}";
 
-        String facetStage = String.format(
-            "{$facet: {" +
-                "results: [{$skip: %d}, {$limit: %d}]," +
-                "total: [{$count: 'count'}]" +
-            "}}",
-            pageable.getOffset(),
-            pageable.getPageSize()
-        );
+        String facetStage = """
+            {$facet: {
+                results: [{$skip: %d}, {$limit: %d}],
+                total: [{$count: 'count'}]
+            }}""".formatted(pageable.getOffset(), pageable.getPageSize());
 
         AggregationOperation searchOperation = context -> Document.parse(searchQuery);
         AggregationOperation matchCountOperation = context -> Document.parse(matchCountStage);
@@ -108,36 +105,38 @@ public class MongoRecommendClient {
         List<String> clauses = new ArrayList<>();
 
         // 첫 번째 키워드 - 가장 높은 가중치
-        if (userKeywords.size() >= 1 && StringUtils.hasText(userKeywords.get(0))) {
-            clauses.add(String.format("{text: {" +
-                "query: '%s'," +
-                "path: 'hashtags'," +
-                "score: {boost: {value: 6.0}}" +
-                "}}", userKeywords.get(0)));
+        if (StringUtils.hasText(userKeywords.get(0))) {
+            clauses.add("""
+                {text: {
+                    query: '%s',
+                    path: 'hashtags',
+                    score: {boost: {value: 6.0}}
+                }}""".formatted(userKeywords.get(0)));
         }
 
         // 두 번째 키워드
         if (userKeywords.size() >= 2 && StringUtils.hasText(userKeywords.get(1))) {
-            clauses.add(String.format("{text: {" +
-                "query: '%s'," +
-                "path: 'hashtags'," +
-                "score: {boost: {value: 5.0}}" +
-                "}}", userKeywords.get(1)));
+            clauses.add("""
+                {text: {
+                    query: '%s',
+                    path: 'hashtags',
+                    score: {boost: {value: 5.0}}
+                }}""".formatted(userKeywords.get(1)));
         }
+
 
         // 기본 가중치
         if (userKeywords.size() > 2) {
             List<String> remainingClauses = userKeywords.stream()
                 .skip(2)  // 첫 두 개의 키워드는 건너뛰기
                 .filter(StringUtils::hasText)
-                .map(keyword ->
-                    String.format("{text: {" +
-                        "query: '%s'," +
-                        "path: 'hashtags'," +
-                        "score: {boost: {value: 4.0}}" +
-                        "}}", keyword)
-                )
-                .collect(Collectors.toList());
+                .map("""
+                    {text: {
+                        query: '%s',
+                        path: 'hashtags',
+                        score: {boost: {value: 4.0}}
+                    }}"""::formatted)
+                .toList();
 
             clauses.addAll(remainingClauses);
         }
